# AI-Front-Desk-Voice-Agent-for-Healthcare-Appointment-Booking

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: agent.py  config.py  db.py  main.py  rag.py  stt.py  tts.py
app/api/: deps.py
app/api/routes/: admin.py  health.py  telephony.py  websocket.py
app/knowledge_base/: departments.md  doctors.md  emergency.md  faq_general.md  health_safety.md  insurance.md  parking.md  visiting_hours.md
app/models/: db.py
app/schemas/: appointment.py
app/services/: audio_convert.py  rag.py  stt.py  tts.py
app/services/agent/: booking.py  faq.py  intent.py  prompts.py  tools.py
app/static/: index.html
scripts/: latency_report.py  make_test_call.py  seed_db.py  seed_rag.py
tests/: test_booking.py  test_intent.py  test_rag.py
tests/integration/: test_booking.py
tests/unit/: test_audio_convert.py  test_intent.py  test_rag.py
